[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdl-utils"
version = "0.3.0"
description = "SDL Utilities for lab workflow management"
authors = [{name = "Yang Cao", email = "cyrilcaoyang@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "paho-mqtt>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "sqlite3worker>=1.1.7"
]

[project.optional-dependencies]
prefect-full = [
    "prefect>=2.10.0",
    "prefect-shell>=0.2.0",
    "slack_bolt>=1.18.0",
    "slack_sdk>=3.19.0"
]
prefect-worker = [
    "prefect>=2.10.0"
]

[tool.setuptools.packages.find]
where = ["src"]